@@ -509,7 +509,7 @@
 		<dependency>
 			<groupId>net.java.dev.jna</groupId>
 			<artifactId>jna</artifactId>
-			<version>3.2.4</version>
+			<version>3.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>common-jukebox</groupId>
