@@ -7,6 +7,7 @@ aTunes 3.0.1
 - FIX: Problem changing look and feel and skin using keyboard in combos
 - FIX: Error retrieving titles from CDDB while ripping a CD
 - FIX: Avoid concurrency problems with album collections
+- FIX: Updated JNA library to avoid initialization errors
 
 
 aTunes 3.0.0
